Updated tests for services, mappers and controllers